[WIP]: show some audio buffer information.

--- a/audio-view-test/index.html
+++ b/audio-view-test/index.html
@@ -22,7 +22,7 @@
     <a href="javascript:window.AUDIOVIEW.play()">play</a>
     <a href="javascript:window.AUDIOVIEW.stop()">stop</a>
   </div>
-  <div class="log"></div>
+  <div class="log">loading...</div>
 </body>
 
 </html>
