[WIP]: add play(skipSilence). render current play pos marker.

--- a/audio-view-test/index.html
+++ b/audio-view-test/index.html
@@ -20,6 +20,7 @@
   <canvas class='audioView'></canvas>
   <div>
     <a href="javascript:window.AUDIOVIEW.play()">play</a>
+    <a href="javascript:window.AUDIOVIEW.play(true)">play(skip silence)</a>
     <a href="javascript:window.AUDIOVIEW.stop()">stop</a>
   </div>
   <div class="log">loading...</div>
